--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,9 @@ body {
 .sky {
   overflow-x: hidden;
   position: relative;
-  background-image: linear-gradient( #F3BADB, #F6D19C);
+  background-image: linear-gradient( #80bfd8, #f3b55f);
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
 }
@@ -28,33 +28,46 @@ body {
 
 #cloud-one {
   width: 20%;
-  bottom: 40%;
+  bottom: 30%;
   left: 75%;
+  opacity: 70%;
 }
 
 #cloud-two {
   width: 25%;
-  bottom: 80%;
-  left: 70%;
+  bottom: 60%;
+  left: 75%;
+  opacity: 70%;
 }
 
 #cloud-three {
-  width: 30%;
-  bottom: 60%;
+  width: 10%;
+  bottom: 35%;
   left: 0%;
+  opacity: 70%;
 }
 
 #cloud-four {
   width: 24%;
-  bottom: 70%;
-  margin-right: 40%;
-  left: 20%;
+  bottom: 40%;
+  /* margin-right: 40%; */
+  left: 15%;
+  opacity: 70%;
 }
 
 #cloud-five {
   width: 23%;
-  bottom: 60%;
-  left: 60%;
+  bottom: 40%;
+  left: 45%;
+  opacity: 70%;
+  z-index: 1;
+}
+
+#cloud-six {
+  width: 15%;
+  bottom: 55%;
+  left: 14%;
+  opacity: 70%;
 }
 
 /* #javascript {
