--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Amatic+SC:wght@700&family=Architects+Daughter&family=Merienda:wght@700&family=Russo+One&family=Staatliches&display=swap');
 
 body {
   margin: 0;
@@ -70,32 +70,32 @@ body {
 }
 
 #birds {
-  width: 10%;
+  width: 15%;
   bottom: 10%;
   left: 10%;
 }
 
 #github {
-  width: 4%;
-  bottom: 72%;
-  left: 48%;
+  width: 6vh;
+  bottom: 0%;
+  left: 43%;
   border-radius: 25px;
   padding: 1px;
   box-shadow: 2px 2px 4px black, 4px 4px 4px rgb(247, 151, 6);
 }
 
 #linkedin {
-  width: 4%;
-  bottom: 72%;
-  left: 40%;
+  width: 6vh;
+  bottom: 0%;
+  left: 17%;
   border-radius: 5px;
   box-shadow: 2px 2px 4px black, 4px 4px 4px rgb(247, 151, 6);
 }
 
 #mail {
-  width: 5%;
-  bottom: 72%;
-  left: 56%;
+  width: 7vh;
+  bottom: 0%;
+  left: 68%;
   padding: 1px;
   border-radius: 10px;
   box-shadow: 2px 2px 4px black, 4px 4px 4px rgb(247, 151, 6);
@@ -124,17 +124,33 @@ body {
 }
 
 #name {
-  font-size: 50px;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  color: white;
+  font-size: 7vh;
+  font-weight:900;
   text-shadow: 2px 2px 4px black, 4px 4px 4px rgb(247, 151, 6);
-
+  margin-top: 2vh;
+  margin-bottom: -3vh;
 }
 
-/* .header {
+#subtitle {
+  text-align: center;
+  font-size: 3vh;
+  font-weight:900;
+  text-shadow: 2px 2px 4px black, 4px 4px 4px rgb(247, 151, 6);
+  padding-bottom: 5vh;
+}
+
+header {
+  font-family: 'Merienda', cursive;
   color: white;
-  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-size: 30px;
-  border: green solid 2px;
-} */
+  position: fixed;
+  top: 0;
+  z-index: 3;
+  align-items: center;
+  padding: 0;
+}
+
+a:hover {
+  box-shadow: 5px 5px 6px black, 8px 8px 8px rgb(247, 151, 6);
+  width: 9vh;
+}
 /* #4ff749 */
